--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,9 +32,15 @@ endif()
 # add_definitions(-D_MYNOZLIB)
 
 # Set the list of names of the third-party targets and libraries
-set(THIRDPARTY_TARGETS BSONIO)
-set(THIRDPARTY_LIBS bsonio)
+if(LINK_GEMS4R)
+set(THIRDPARTY_TARGETS BSONIO GEMS4R)
+set(THIRDPARTY_LIBS Qt5::Widgets bsonio lua5.2 thrift boost_regex gems4r)
 set(THERMOFUN_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/)
+else()
+set(THIRDPARTY_TARGETS BSONIO)
+set(THIRDPARTY_LIBS Qt5::Widgets bsonio lua5.2 thrift boost_regex)
+set(THERMOFUN_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/)
+endif()
 
 # Create the shared library using the collected source files
 add_library(THERMOFUN_OBJECTS OBJECT ${HEADER_FILES} ${SOURCE_FILES})
@@ -46,9 +52,9 @@ add_dependencies(THERMOFUN_OBJECTS ${THIRDPARTY_TARGETS})
 if(BUILD_SHARED_LIBS)
     add_library(THERMOFUN_SHARED SHARED $<TARGET_OBJECTS:THERMOFUN_OBJECTS>)
     target_link_libraries(THERMOFUN_SHARED ${THIRDPARTY_LIBS} )
-if( ${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
-    target_link_libraries(THERMOFUN_SHARED ejdb thrift lua bsonio Qt5::Widgets)
-endif()
+    if( ${CMAKE_CXX_COMPILER_ID} MATCHES "Clang")
+         target_link_libraries(THERMOFUN_SHARED ejdb thrift lua bsonio Qt5::Widgets)
+    endif()
     set_target_properties(THERMOFUN_SHARED PROPERTIES OUTPUT_NAME thermofun)
     install(TARGETS THERMOFUN_SHARED DESTINATION lib)
 endif()
